<resources>
    <string name="app_name">Alumno de TTA</string>
    <string name="action_settings">Settings</string>
    <string name="user">Usuario</string>
    <string name="introducedni">Introduce DNI</string>
    <string name="passwd">Contraseña</string>
    <string name="introduce_password">Introduce password</string>
    <string name="acceder">Acceder</string>
    <string name="title_activity_menu">Evaluación de TTA</string>
    <string name="leccion1">Lección1: Introducción a Android</string>
    <string name="nuevo_test">NUEVO TEST</string>
    <string name="nuevo_ejercicio">NUEVO EJERCICIO</string>
    <string name="seg">SEGUIMIENTO</string>
    <string name="title_activity_test">Nuevo test</string>
    <string name="enviar">ENVIAR</string>
    <string name="ayuda">VER AYUDA</string>
    <string name="title_activity_exercise">Nuevo Ejercicio</string>
    <string name="enunciado_exercise">Explica cómo aplicarías el patrón MVC....</string>
    <string name="subirfichero">SUBIR FICHERO</string>
    <string name="sacarfoto">SACAR FOTO</string>
    <string name="grabaraudio">GRABAR AUDIO</string>
    <string name="grabarvideo">GRABAR VIDEO</string>
    <string name="no_camara">No hay cámara</string>
    <string name="no_app">No hay app</string>
    <string name="no_micro">No hay micro</string>
    <string name="enviarfich">se envía el fichero</string>
    <string name="title_activity_model">ModelActivity</string>


</resources>
